SalesForce/src/objects/Item_Master__c.object
<CustomObject>
    <fields>
        <fullName>Email_Formula__c</fullName>
        <formula>BLANKVALUE( Email__c ,  Owner:User.FirstName + &apos;@gmail.com&apos;)</formula>
        <label>Email_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Cost__c</fullName>
        <label>Item Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Group__c</fullName>
        <label>Item Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Large Items</fullName>
                </value>
                <value>
                    <fullName>Small Items</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rollup__c</fullName>
        <label>Rollup</label>
        <summarizedField>Registration__c.Rollup__c</summarizedField>
        <summaryForeignKey>Registration__c.State_Roll__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>item__c</fullName>
        <label>Items</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Item_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOOK</fullName>
                </value>
                <value>
                    <fullName>CHARGER</fullName>
                </value>
                <value>
                    <fullName>DESKTOP</fullName>
                </value>
                <value>
                    <fullName>LANDLINE</fullName>
                </value>
                <value>
                    <fullName>LAPTOP</fullName>
                </value>
                <value>
                    <fullName>MICRO ATM</fullName>
                </value>
                <value>
                    <fullName>MOBILE</fullName>
                </value>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>TAB</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item_Masters</pluralLabel>
    <recordTypes>
        <fullName>Record_type1</fullName>
        <active>true</active>
        <label>Record type1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type2</fullName>
        <active>true</active>
        <label>Record type2</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ItemCost_Field_Should_Not_allow_alphabet</fullName>
        <active>true</active>
        <errorConditionFormula>Item_Cost__c  &lt;= 100</errorConditionFormula>
        <errorDisplayField>Item_Cost__c</errorDisplayField>
        <errorMessage>Item Cost Should not be less than 100</errorMessage>
    </validationRules>
</CustomObject>